fix: Minor alignment

--- a/src/app/modules/consultations/consultation-profile/read-respond/read-respond.component.scss
+++ b/src/app/modules/consultations/consultation-profile/read-respond/read-respond.component.scss
@@ -41,12 +41,6 @@
   .heading {
     @include general-text($font-size: 16px, $weight: bold);
   }
-
-  .reading-info {
-    font-size: 12px;
-    color: rgba(0, 0, 0, 0.54);
-  }
-
   
   .summary-content {
     @include general-text;
